contrast fix

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -98,7 +98,7 @@ footer p {
   font-size: 1rem;
   font-weight: bold;
   font-style: italic;
-  color: red;
+  color: #A80000;
 }
 /*** Error page elements ***/
 #error-ttl {
